# dungeon

./: .gitignore  Cargo.toml  README.md  inventory.json  loot.json
.github/workflows/: gh-pages.yml  static.yml
src/: actions.rs  inventory.rs  lib.rs  loot.rs  main.rs  rng.rs  ui.rs  wasm_api.rs
tests/: core_penalty_and_loot.rs  deterministic_rng.rs  edge_cases.rs  simulation_flows.rs
web/: index.html
