[package]
name = "dungeon"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[[bin]]
name = "dungeon"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
dialoguer = "0.12.0"
rand = { version = "0.9.2", features = ["small_rng"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
