[package]
name = "dungeon"
version = "0.1.0"
edition = "2024"
description = "Dungeon CLI / WASM demo"
license = "MIT OR Apache-2.0"

[lib]
name = "dungeon_core" # differentiate artifact name from bin to avoid wasm collision
doctest = false
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "dungeon"
path = "src/main.rs"
required-features = ["cli"]
test = false
doctest = false

[features]
default = []
cli = ["dialoguer"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[dependencies]
dialoguer = { version = "0.12.0", optional = true }
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[profile.release]
opt-level = "z"        # Optimize for size
lto = true              # Link Time Optimization
codegen-units = 1       # Better optimizations
strip = "symbols"       # Remove symbols to shrink wasm
panic = "abort"        # Smaller panic paths

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
